<resources>
    <string name="app_name">My Booking System</string>
    <string name="regResBtn">Restaurant overview</string>
    <string name="regFriendsBtn">Friends overview</string>
    <string name="resMenuText">My Restaurants</string>
    <string name="friendsMenuText">My Friends</string>
    <string name="ordersMenuText">My Orders</string>
    <string name="settings">Settings</string>
    <string name="ResHeader">Add Restaurant</string>
    <string name="FriHeader">Add Friend</string>
    <string name="OrderHeader">Create Order</string>
    <string name="FriUpdateHeader">Update Friend</string>
    <string name="ResUpdateHeader">Update restaurant</string>
    <string name="OrdHeader">Add Order</string>
    <string name="nameLabel">Name</string>
    <string name="addressLabel">Address</string>
    <string name="phoneLabel">Phone number</string>
    <string name="typeLabel">Type</string>
    <string name="addBtnLabel">Add</string>
    <string name="updateBtnLabel">Update</string>
    <string name="deleteBtnLabel">Delete</string>
    <string name="resDropdownHeaderText">Choose restaurant</string>
    <string name="datepickerBtn">Select date</string>
    <string name="selectedDateBase">Date:</string>
    <string name="chooseFriends">Choose friends</string>
    <string name="setSMScheckboxTitle">SMS</string>
    <string name="setSMSsummary">Enable SMS notification</string>
    <string name="chooseDate">Choose date</string>
    <string name="dateHint">Click to add date</string>
    <string name="setUsernameTitle">Username</string>
    <string name="setUsernameSummary">Set a username to appear on the SMS notification to you friends</string>
    <string name="SettingsHeader">Settings</string>
    <string name="CreateOrderBtn">Add</string>
    <string name="OrderUpdateHeader">Update Order</string>
    <string name="setMessageTitle">Edit default SMS</string>
    <string name="defaultMessageBase">You have a dinner coming up. </string>
    <string name="signMessageBase">Best regards </string>
    <string name="setMessageSummary">Here you can edit the default message sent to your friends</string>
    <string name="setHourText">Set hour</string>
    <string name="setMinuteText">Set minutes</string>
    <string name="setHourSummary">Set the hour you want the SMS notification to be sent, if nohing is choosen hour will be 12</string>
    <string name="setMinuteSummary">Set the minute over hour you want the SMS notification to be sent, if nothing is chosen minute will be 00</string>
    <string name="yes">Yes</string>
    <string name="deleteDialogText">Are you sure you want to delete this entry?</string>
    <string name="no">No</string>
    <string name="deleteDialogTitle">Delete</string>
    <string name="notificationTitle">Dinner alert!</string>
    <string name="notificationText">You have a dinner today</string>
    <string name="channel_name">RestaurantAPP notification channel</string>
    <string name="channel_description">This channel enables notifications for the restaurant app</string>
</resources>
