<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="SMScheckbox"
        android:onClick="toggleSMS"
        android:title="@string/setSMScheckboxTitle"
        android:summary="@string/setSMSsummary"/>

    <EditTextPreference
        android:key="setSMSmessage"
        android:title="@string/setMessageTitle"
        android:defaultValue="@string/defaultMessageBase"
        android:summary="@string/setMessageSummary"/>

    <ListPreference
        android:key="setHour"
        android:title="@string/setHourText"
        android:summary="@string/setHourSummary"
        android:entries="@array/hours"
        android:entryValues="@array/hours"/>

    <ListPreference
        android:key="setMinute"
        android:title="@string/setMinuteText"
        android:summary="@string/setMinuteSummary"
        android:entries="@array/minutes"
        android:entryValues="@array/minutes"/>


</PreferenceScreen>