<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:onClick="addOrder"
            android:src="@drawable/ic_event_note_white_24dp"
            app:fabSize="mini" />

        <TextView
            android:id="@+id/fabOrderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="68dp"
            android:layout_marginBottom="32dp"
            android:elevation="16dp"
            android:text="@string/OrderHeader"
            android:textColor="@color/dark"
            android:visibility="gone" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:onClick="addRestaurant"
            android:src="@drawable/ic_restaurant_white_24dp"
            app:fabSize="mini" />

        <TextView
            android:id="@+id/fabRestaurantLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="68dp"
            android:layout_marginBottom="32dp"
            android:elevation="16dp"
            android:text="@string/ResHeader"
            android:textColor="@color/dark"
            android:visibility="gone" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:onClick="addFriend"
            android:src="@drawable/ic_person_white_24dp"
            app:fabSize="mini" />

        <TextView
            android:id="@+id/fabFriendLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="68dp"
            android:layout_marginBottom="32dp"
            android:elevation="16dp"
            android:text="@string/FriHeader"
            android:textColor="@color/dark"
            android:visibility="gone" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:onClick="hideFabs"
            android:src="@drawable/ic_remove_white_24dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:onClick="showFabs"
            android:src="@drawable/ic_add_white_24dp" />
    </FrameLayout>

</LinearLayout>